# splendid-flows

./: Cargo.toml  README.md
src/: auth.rs  commands.rs  handler.rs  lib.rs  success.html  typo.rs  util.rs
src/emoji/: done  inprogress  todo
src/handler/: all.rs  all_assigned.rs  assign.rs  emoji.rs  evolve.rs  mod.rs  task.rs
