[package]
name = "splendid-flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
tokio_wasi = { version = "1.25.0", features = ["rt", "macros"] }
flowsnet-platform-sdk = "0.1"
log = "0.4"
discord-flows = "0.6.1"
lazy_static = "1.4.0"
