[package]
name = "splendid-flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
airtable-api-wasi = "0.2.1"
discord-flows = "0.6.3"
flowsnet-platform-sdk = "0.1.6"
log = "0.4.20"
reqwest_wasi = { version = "0.11.16", features = ["wasmedge-tls"] }
serde = "1.0.193"
serde_json = "1.0"
tokio_wasi = { version = "1.25.0", features = ["rt", "macros"] }
